[package]
name = "lens-client"
version = "0.1.0"
edition = "2021"
description = "Lens Protocol API client"
license = "MIT"
repository = "https://github.com/gioelecerati/lens-rs"
readme = "README.md"
exclude = [
    "queries/*",
    "test/*",
    "examples/*"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
surf = "2.3.2"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
colored = "2.0.0"
eth-keystore = "0.4.1"
rand = "0.8.5"
k256 = {version = "0.10.4", features = ["keccak256", "ecdsa"]}
sha3 = "0.10.1"
hex = "0.4.3"
secp256k1 = {version = "0.21.3", features = ["recovery", "global-context", "bitcoin_hashes"]}
eth_checksum = "0.1.2"
ethers-signers = "0.13.0"